updated article link url and copy

--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
     <div>
 
         <h1>Gelatin Photoblog</h1>
-        <p>I am sorry to say that &mdash; after 12 years &mdash; the photoblog has siezed to exist. I will provide an archived gallery of the pictures soon and have explained the reasons behind my decesion in <a href="//borbely.info/blog/goodbye-gelatin-photoblog">this article</a>.</p>
-        <!-- <p>If you just want to find the pictures, which were hosted here, you can still find them in these <a href="//borbely.info/galleries/">archived galleries</a>.</p> -->
+        <p>I am sorry to say that &mdash; after 12 years &mdash; the photoblog has siezed to exist. You can see some of the images and read my reasons behind my decesion in <a href="http://borbely.info/blog/goodbye-gelatin-photoblog">this article</a>.</p>
 
         <p>Thank you for your visit!</p>
-
 
     </div>
 
