updated page content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div>
 
         <h1>Gelatin Photoblog</h1>
-        <p>I am sorry to say that &mdash; after 12 years &mdash; the photoblog has siezed to exist. You can see some of the images and read my reasons behind my decesion in <a href="http://borbely.info/blog/goodbye-gelatin-photoblog">this article</a>.</p>
+        <p>I am sorry to inform you that &mdash; after 12 years &mdash; the photoblog has siezed to exist. </p>
+        <p>You can find some of the images and read my reasons behind this decesion in <a href="http://borbely.info/blog/goodbye-gelatin-photoblog">this article</a>.</p>
 
         <p>Thank you for your visit!</p>
 
