added google verification metatag to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Gelatin Photoblog - gelatinpixel.com </title>
-
+    <meta name="google-site-verification" content="6pGD4HYNCPtOe85xvaPPsYJQB-zoZSy4b4ZahPpH4bk" />
     <link rel="stylesheet" type="text/css" href="./styles.min.css">
 
 </head>
