--- a/index.html
+++ b/index.html
@@ -2,23 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Gelatin Photoblog - gelatinpixel.com </title>
-
+    <title>gelatinpixel.com </title>
     <meta name="google-site-verification" content="6pGD4HYNCPtOe85xvaPPsYJQB-zoZSy4b4ZahPpH4bk" />
     <link rel="stylesheet" type="text/css" href="./styles.min.css">
 
 </head>
 <body>
-
-    <div>
-
-        <h1>Gelatin Photoblog</h1>
-
-        <p>I am sorry to say that &mdash; after 12 years &mdash; the photoblog has siezed to exist. You can see some of the images and read my reasons behind my decesion in <a href="http://borbely.info/blog/goodbye-gelatin-photoblog">this article</a>.</p>
-
-        <p>Thank you for your visit!</p>
-
-    </div>
+    
+    <h1>gelatinpixel.com</h1>
 
 </body>
 </html>
